--- a/vignettes/blueprint-july.Rmd
+++ b/vignettes/blueprint-july.Rmd
@@ -165,7 +165,7 @@ $\frac{Q}{\nu}$ is the number of air changes per hour.
 $\alpha$ is therefore the number of equivalent air changes per hour taking into account both natural decay of the virus and ventilation-driven removal of infective virus.
 For the purposes of the analyses presented here, we assume the volume of the space is the following: $$
 \nu = N D_mH
-$$where $N$ is the number of people occupying the space, $D_m$ is the density of people in the space (i.e. the number of people per m\^2) and $H$ is the height of the space.
+$$where $N$ is the number of people occupying the space, $D_m$ is the density of people in the space (i.e. the number of people per m^2^) and $H$ is the height of the space.
 
 We then integrate this estimate of the concentration of infective virus in the space with the Wells-Riley equation, a simple and widely used model for the airbone transmission of infectious diseases.
 The Wells-Riley equation takes the following form:
@@ -244,18 +244,18 @@ c
 | Parameter       | Value Used                          | Description                                                                                     | Source                                                                                                                                  |
 |-------------|-------------|-------------------|----------------------------|
 | $\pi$           | 27 viruses per person per hour      | Rates of infective virus emission from infected individuals.                                    | @blatchley2023quantitative & @buonanno2020quantitative                                                                                  |
-| $D_{school}$    | 30 per 100m\^2                      | Assumed density of individuals in schools                                                       | ANSI/ASHRAE Standard 62.1-2022 Table 6.1                                                                                                |
+| $D_{school}$    | 30 per 100m^2^                      | Assumed density of individuals in schools                                                       | ANSI/ASHRAE Standard 62.1-2022 Table 6.1                                                                                                |
 | $A_{school}$    | 0.1-2.9 air changes per hour (ACPH) | Range of ACPH considered for schools.                                                           | [Corsi et al, 2006](https://corsiaq.com/reports-etc/) - Section 3.1                                                                     |
-| $D_{workplace}$ | 10 per 100m\^2                      | Assumed density of individuals in workplaces                                                    | ANSI/ASHRAE Standard 62.1-2022 Table 6.1                                                                                                |
+| $D_{workplace}$ | 10 per 100m^2^                      | Assumed density of individuals in workplaces                                                    | ANSI/ASHRAE Standard 62.1-2022 Table 6.1                                                                                                |
 | $A_{workplace}$ | 0.22-4.84 ACPH                      | Range of ACPH considered for workplaces.                                                        | [Corsi et al, 2006](https://corsiaq.com/reports-etc/) - Section 3.1                                                                     |
-| $D_{household}$ | 5 per 100m\^2                       | Density of individuals in households                                                            | Assumed                                                                                                                                 |
+| $D_{household}$ | 5 per 100m^2^                       | Density of individuals in households                                                            | Assumed                                                                                                                                 |
 | $A_{household}$ | 0.21-1.48 ACPH                      | Range of ACPH considered for households.                                                        | [Corsi et al, 2006](https://corsiaq.com/reports-etc/) - Section 3.1                                                                     |
-| $D_{leisure}$   | 50 per 100m\^2                      | Density of individuals in leisure settings                                                      | ANSI/ASHRAE Standard 62.1-2022 Table 6.1                                                                                                |
+| $D_{leisure}$   | 50 per 100m^2^                      | Density of individuals in leisure settings                                                      | ANSI/ASHRAE Standard 62.1-2022 Table 6.1                                                                                                |
 | $A_{leisure}$   | 0.22-4.84 ACPH                      | Range of ACPH considered for leisure locations.                                                 | [Corsi et al, 2006](https://corsiaq.com/reports-etc/) - Section 3.1                                                                     |
 | $k_D$           | 0.64                                | Natural decay constant for SARS-CoV-2 in aerosols                                               | @blatchley2023quantitative & @van2020aerosol                                                                                            |
 | $H$             | 2.5m                                | Height of the space                                                                             | Assumed                                                                                                                                 |
-| $B$             | 0.45 m\^3 per hour                  | Volume breathing rate assumes 15 breaths per minute and 500ml tidal volume = 0.45m\^3 per hour. | [Here](https://www.verywellhealth.com/tidal-volume-5090250#) & [here](https://my.clevelandclinic.org/health/articles/10881-vital-signs) |
-| $r$             | 1.37 × 10\^-2                       | The probability that a single inhaled infective virus will initiate an infection.               | @blatchley2023quantitative & @killingley2022safety                                                                                      |
+| $B$             | 0.45 m^3^ per hour                  | Volume breathing rate assumes 15 breaths per minute and 500ml tidal volume = 0.45m^3^ per hour. | [Here](https://www.verywellhealth.com/tidal-volume-5090250#) & [here](https://my.clevelandclinic.org/health/articles/10881-vital-signs) |
+| $r$             | 1.37 × 10^-2^                       | The probability that a single inhaled infective virus will initiate an infection.               | @blatchley2023quantitative & @killingley2022safety                                                                                      |
 
 : Table 1: Parameter Estimates Used to Calculate Variation in Riskiness Across Locations Belonging to the Same Setting Type
 
